<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="engineer_breakthrough">工程大突破</string>
    <string name="xyz">XYZ 阅读器</string>
</resources>
