<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"
            android:textStyle="bold"
            android:textSize="32dp"
            android:layout_gravity="center_horizontal"
            android:id = "@+id/textview1" />

        <Button
            android:id = "@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:layout_marginTop="30dp"
            android:height="80dp"
            android:text="@string/spotify_streamer" />

        <Button
            android:id = "@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:layout_marginTop="10dp"
            android:height="80dp"
            android:text="@string/super_duo" />

        <Button
            android:id = "@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:layout_marginTop="10dp"
            android:height="80dp"
            android:text="@string/engineer_breakthrough" />

        <Button
            android:id = "@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CodeFont"
            android:layout_marginTop="10dp"
            android:height="80dp"
            android:text="@string/xyz" />


    </LinearLayout>

</ScrollView>
